// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form ticket forms validation renders the error messages 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="sc-bdVaJa gszxaC"
    >
      <div
        class="sc-htpNat fufVln"
      >
        <div
          class="sc-ifAKCX sc-EHOje cFboZL"
        >
          <h1
            class="sc-bxivhb krnEZd"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="IconButton-x15t1e-0 sc-bZQynM index__c-btn--icon___1Yl4x iykRND Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="sc-gzVnrw hIzQnb"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-118--input"
              id="garden-field-container-118--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-118--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-118--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-118--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-119--input"
              id="garden-field-container-119--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-119--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-119--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-119--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a valid email address.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-120--input"
              id="garden-field-container-120--label"
            >
              <strong>
                Description
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-120--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-120--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-120--input"
              name="1"
              required=""
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-121--input"
              id="garden-field-container-121--label"
            >
              <strong>
                Subject
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-121--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-121--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-121--input"
              name="2"
              required=""
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-122--input"
              id="garden-field-container-122--label"
            >
              <strong>
                Favorite Burger
              </strong>
            </label>
            <div
              class="StyledTextHint-sc-1se1nkb-0 text__c-txt__hint___24dmS kmdLlE"
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-122--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="garden-field-container-122--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-122--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-122--input"
              name="4"
              required=""
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-123--input"
              id="garden-field-container-123--label"
            >
              <strong>
                Favorite Integer
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-123--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-123--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-123--input"
              min="0"
              name="7"
              required=""
              step="1"
              type="number"
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-124--input"
              id="garden-field-container-124--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-124--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-124--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-124--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-125--input"
              id="garden-field-container-125--label"
            >
              <strong>
                Favorite Textarea
              </strong>
            </label>
            <textarea
              aria-describedby="garden-field-container-125--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-125--label"
              class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--error___2-sbj text__c-txt__input--area___9Qxj1 ffjHNh"
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-125--input"
              name="10"
              required=""
              rows="5"
            />
            <div
              class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <div
                class="StyledCheck__StyledCheckbox-hsbd5j-0 checkbox__c-chk___1VO4F ivLctR"
              >
                <input
                  aria-labelledby="garden-field-container-126--label"
                  class="StyledCheckInput-zaakv6-0 checkbox__c-chk__input___3419r haaQZg"
                  data-garden-container-id="keyboardfocus"
                  data-garden-container-version="0.2.6"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.0.2"
                  id="garden-field-container-126--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="StyledCheckLabel-sc-1r3kdgk-0 checkbox__c-chk__label___12wm4 xKOVX"
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-126--input"
                  id="garden-field-container-126--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
              </div>
              <div
                class="StyledTextMessage-sc-1e3gsnp-0 text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE fsHTnL"
                data-garden-id="forms.text_message"
                data-garden-version="7.0.2"
                role="alert"
              >
                Please check this box to proceed.
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-2-label"
              class="StyledField-ktuei3-0 text__c-txt___3byGW cYIRck"
              data-garden-id="dropdowns.field"
              data-garden-version="7.0.2"
              role="combobox"
            >
              <label
                class="StyledLabel-sc-1i8qu0f-0 text__c-txt__label___2Nog7 iEWMOR"
                data-garden-id="dropdowns.label"
                data-garden-version="7.0.2"
                for="downshift-2-input"
                id="downshift-2-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                aria-haspopup="true"
                aria-invalid="false"
                class="sc-kgoBCf hTuHOt StyledSelect-xxildx-0 text__c-txt__input___17zQx text__c-txt__input--select___324ys cJYChq"
                data-garden-id="dropdowns.select"
                data-garden-version="7.0.2"
                data-testid="dropdown-field"
                data-toggle="true"
                role="button"
                tabindex="0"
                type="button"
              >
                -
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="StyledInput-sc-1580ddl-0 text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg jKOqGP"
                  id="downshift-2-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
              <div
                class="StyledMessage-v8pcfd-0 text__c-txt__message___L_GjG text__c-txt__message--error___2zV-K kjtyHQ"
                data-garden-id="dropdowns.message"
                data-garden-version="7.0.2"
                role="alert"
              >
                Please enter a value.
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class="StyledMenu__StyledMenuWrapper-sc-12lp0qs-1 hoPEzl"
              >
                <ul
                  aria-labelledby="downshift-2-label"
                  class="StyledMenu__StyledMenuView-sc-12lp0qs-0 index__c-menu___3N4tx kIhRpn"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.0.2"
                  data-testid="dropdown-options"
                  id="downshift-2-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="StyledMenu__StyledMaxHeightWrapper-sc-12lp0qs-2 fcTjZX"
                  >
                    <li
                      aria-selected="false"
                      class="StyledItem-sc-1xeog7q-0 index__c-menu__item___36mO8 dSbjOw"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-0"
                      role="option"
                    >
                      one
                    </li>
                    <li
                      aria-selected="false"
                      class="StyledItem-sc-1xeog7q-0 index__c-menu__item___36mO8 dSbjOw"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-1"
                      role="option"
                    >
                      two
                    </li>
                    <li
                      aria-selected="false"
                      class="StyledItem-sc-1xeog7q-0 index__c-menu__item___36mO8 dSbjOw"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-2"
                      role="option"
                    >
                      three
                    </li>
                  </div>
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value=""
          />
          <span />
        </div>
      </div>
      <footer
        class="sc-htoDjs zHYvw"
      >
        <div
          class="sc-dnqmqq wngUt"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`renders the expected components 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="sc-bdVaJa gszxaC"
    >
      <div
        class="sc-htpNat fufVln"
      >
        <div
          class="sc-ifAKCX sc-EHOje cFboZL"
        >
          <h1
            class="sc-bxivhb krnEZd"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="IconButton-x15t1e-0 sc-bZQynM index__c-btn--icon___1Yl4x iykRND Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="sc-gzVnrw hIzQnb"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          />
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-0--input"
              id="garden-field-container-0--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-0--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-0--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-0--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-1--input"
              id="garden-field-container-1--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-1--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-1--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-1--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <span />
        </div>
      </div>
      <footer
        class="sc-htoDjs zHYvw"
      >
        <div
          class="sc-dnqmqq wngUt"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`ticket forms renders the extra fields defined in the ticket form 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="sc-bdVaJa gszxaC"
    >
      <div
        class="sc-htpNat fufVln"
      >
        <div
          class="sc-ifAKCX sc-EHOje cFboZL"
        >
          <h1
            class="sc-bxivhb krnEZd"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="IconButton-x15t1e-0 sc-bZQynM index__c-btn--icon___1Yl4x iykRND Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="sc-gzVnrw hIzQnb"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-18--input"
              id="garden-field-container-18--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-18--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-18--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-18--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-19--input"
              id="garden-field-container-19--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-19--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-19--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-19--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-20--input"
              id="garden-field-container-20--label"
            >
              <strong>
                Description
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-20--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-20--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-20--input"
              name="1"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-21--input"
              id="garden-field-container-21--label"
            >
              <strong>
                Subject
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-21--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-21--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-21--input"
              name="2"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-22--input"
              id="garden-field-container-22--label"
            >
              <strong>
                Favorite Burger
              </strong>
               (optional)
            </label>
            <div
              class="StyledTextHint-sc-1se1nkb-0 text__c-txt__hint___24dmS kmdLlE"
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-22--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="garden-field-container-22--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-22--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-22--input"
              name="4"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-23--input"
              id="garden-field-container-23--label"
            >
              <strong>
                Favorite Pizza
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-23--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-23--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-23--input"
              name="5"
              required=""
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-24--input"
              id="garden-field-container-24--label"
            >
              <strong>
                Favorite Integer
              </strong>
               (optional)
            </label>
            <div
              class="StyledTextHint-sc-1se1nkb-0 text__c-txt__hint___24dmS kmdLlE"
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-24--hint"
            >
              description number
            </div>
            <input
              aria-describedby="garden-field-container-24--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-24--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-24--input"
              min="0"
              name="7"
              step="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-25--input"
              id="garden-field-container-25--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-25--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-25--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-25--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-26--input"
              id="garden-field-container-26--label"
            >
              <strong>
                Favorite Description
              </strong>
            </label>
            <textarea
              aria-describedby="garden-field-container-26--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-26--label"
              class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-26--input"
              name="9"
              required=""
              rows="5"
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-27--input"
              id="garden-field-container-27--label"
            >
              <strong>
                Favorite Textarea
              </strong>
               (optional)
            </label>
            <textarea
              aria-describedby="garden-field-container-27--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-27--label"
              class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-27--input"
              name="10"
              rows="5"
            />
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <div
                class="StyledCheck__StyledCheckbox-hsbd5j-0 checkbox__c-chk___1VO4F ivLctR"
              >
                <input
                  aria-labelledby="garden-field-container-28--label"
                  class="StyledCheckInput-zaakv6-0 checkbox__c-chk__input___3419r haaQZg"
                  data-garden-container-id="keyboardfocus"
                  data-garden-container-version="0.2.6"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.0.2"
                  id="garden-field-container-28--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="StyledCheckLabel-sc-1r3kdgk-0 checkbox__c-chk__label___12wm4 xKOVX"
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-28--input"
                  id="garden-field-container-28--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="StyledCheckHint-lfmg38-0 checkbox__c-chk__hint___1WMmR iEqtiQ"
                  data-garden-id="forms.checkbox_hint"
                  data-garden-version="7.0.2"
                  id="garden-field-container-28--hint"
                >
                  this is the description
                </div>
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="StyledField-ktuei3-0 text__c-txt___3byGW cYIRck"
              data-garden-id="dropdowns.field"
              data-garden-version="7.0.2"
              role="combobox"
            >
              <label
                class="StyledLabel-sc-1i8qu0f-0 text__c-txt__label___2Nog7 iEWMOR"
                data-garden-id="dropdowns.label"
                data-garden-version="7.0.2"
                for="downshift-0-input"
                id="downshift-0-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                class="StyledHint-sc-1m3rba2-0 text__c-txt__hint___3a0Q6 eiJLPr"
                data-garden-id="dropdowns.hint"
                data-garden-version="7.0.2"
              >
                this is the tagger description
              </div>
              <div
                aria-haspopup="true"
                aria-invalid="false"
                class="sc-kgoBCf hTuHOt StyledSelect-xxildx-0 text__c-txt__input___17zQx text__c-txt__input--select___324ys cJYChq"
                data-garden-id="dropdowns.select"
                data-garden-version="7.0.2"
                data-testid="dropdown-field"
                data-toggle="true"
                role="button"
                tabindex="0"
                type="button"
              >
                two
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="StyledInput-sc-1580ddl-0 text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg jKOqGP"
                  id="downshift-0-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class="StyledMenu__StyledMenuWrapper-sc-12lp0qs-1 hoPEzl"
              >
                <ul
                  aria-labelledby="downshift-0-label"
                  class="StyledMenu__StyledMenuView-sc-12lp0qs-0 index__c-menu___3N4tx kIhRpn"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.0.2"
                  data-testid="dropdown-options"
                  id="downshift-0-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="StyledMenu__StyledMaxHeightWrapper-sc-12lp0qs-2 fcTjZX"
                  >
                    <li
                      aria-selected="false"
                      class="StyledItem-sc-1xeog7q-0 index__c-menu__item___36mO8 dSbjOw"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-0-item-0"
                      role="option"
                    >
                      one
                    </li>
                    <li
                      aria-selected="false"
                      class="StyledItem-sc-1xeog7q-0 index__c-menu__item___36mO8 index__is-checked___34Qxa dSbjOw"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-0-item-1"
                      role="option"
                    >
                      two
                    </li>
                  </div>
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value="2"
          />
          <span />
        </div>
      </div>
      <footer
        class="sc-htoDjs zHYvw"
      >
        <div
          class="sc-dnqmqq wngUt"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;
